# EigenVision

./: .gitignore  CMakeLists.txt  Dockerfile  app.py
.github/workflows/: build.yml
include/: DataLoader.hpp  KNN.hpp  PCA.hpp  Serializer.hpp
src/: bindings.cpp  main.cpp
